ivoszbg: Improve things here and there
Signed-off-by: Ivaylo Ivanov <ivo.ivanov.ivanov1@gmail.com>

--- a/ivoszbg/public/index.html
+++ b/ivoszbg/public/index.html
@@ -120,8 +120,8 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://github.com/ivoszbg.png" alt="hey, my profile picture is supposed to be here :&lt;" title="hey, my profile picture is supposed to be here :&lt;"
-            height="120" width="120" />
+        <img draggable="false" src="http://localhost:1313/images/pfp1.jpg" alt="hey, my profile picture is supposed to be here :&lt;" title="hey, my profile picture is supposed to be here :&lt;"
+            height="110" width="110" />
         <h1><!-- raw HTML omitted -->
 </h1>
         <span></span><div class="social-icons" >
