--- a/ivoszbg/public/index.html
+++ b/ivoszbg/public/index.html
@@ -29,44 +29,12 @@
         }
 
     </style>
-    <style>
-        @media (prefers-color-scheme: dark) {
-            :root {
-                --theme: rgb(29, 30, 32);
-                --entry: rgb(46, 46, 51);
-                --primary: rgb(218, 218, 219);
-                --secondary: rgb(155, 156, 157);
-                --tertiary: rgb(65, 66, 68);
-                --content: rgb(196, 196, 197);
-                --code-block-bg: rgb(46, 46, 51);
-                --code-bg: rgb(55, 56, 62);
-                --border: rgb(51, 51, 51);
-            }
-
-            .list {
-                background: var(--theme);
-            }
-
-            .list:not(.dark)::-webkit-scrollbar-track {
-                background: 0 0;
-            }
-
-            .list:not(.dark)::-webkit-scrollbar-thumb {
-                border-color: var(--theme);
-            }
-        }
-
-    </style>
 </noscript>
 </head>
 
 <body class="list" id="top">
 <script>
     if (localStorage.getItem("pref-theme") === "dark") {
-        document.body.classList.add('dark');
-    } else if (localStorage.getItem("pref-theme") === "light") {
-        document.body.classList.remove('dark')
-    } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
         document.body.classList.add('dark');
     }
 
@@ -122,8 +90,7 @@
     <div class="profile_inner">
         <img draggable="false" src="http://localhost:1313/images/pfp1.jpg" alt="hey, my profile picture is supposed to be here :&lt;" title="hey, my profile picture is supposed to be here :&lt;"
             height="110" width="110" />
-        <h1><!-- raw HTML omitted -->
-</h1>
+        <h1>Ivaylo Ivanov</h1>
         <span></span><div class="social-icons" >
     <a href="https://www.linkedin.com/in/ivaylo-ivanov-ivanov1/" target="_blank" rel="noopener noreferrer me"
         title="Linkedin">
