--- a/ivoszbg/public/404.html
+++ b/ivoszbg/public/404.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>404 Page not found | Ivaylo Ivanov</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:1313/404.html">
+<link rel="canonical" href="https://ivoszbg.github.io/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.fe2314709cbfd64d75002345f3a0d9eba1dc1bce19d7ab334c4103254dd1929f.css" integrity="sha256-/iMUcJy/1k11ACNF86DZ66HcG84Z16szTEEDJU3Rkp8=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
+<link rel="icon" href="https://ivoszbg.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://ivoszbg.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://ivoszbg.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://ivoszbg.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://ivoszbg.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/404.html">
+<link rel="alternate" hreflang="en" href="https://ivoszbg.github.io/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -27,7 +27,15 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:title" content="404 Page not found" />
+<meta property="og:description" content="" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://ivoszbg.github.io/404.html" />
+
+<meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content="404 Page not found"/>
+<meta name="twitter:description" content=""/>
+
 </head>
 
 <body class="list" id="top">
@@ -41,7 +49,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:1313/" accesskey="h" title="Ivaylo Ivanov (Alt + H)">Ivaylo Ivanov</a>
+            <a href="https://ivoszbg.github.io/" accesskey="h" title="Ivaylo Ivanov (Alt + H)">Ivaylo Ivanov</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -67,17 +75,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/blog/" title="Blogs">
+                <a href="https://ivoszbg.github.io/blog/" title="Blogs">
                     <span>Blog posts</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/portfolio/" title="My work">
+                <a href="https://ivoszbg.github.io/portfolio/" title="My work">
                     <span>My work</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:1313/about/" title="About">
+                <a href="https://ivoszbg.github.io/about/" title="About">
                     <span>About</span>
                 </a>
             </li>
@@ -89,7 +97,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:1313/">Ivaylo Ivanov</a></span> · 
+        <span>&copy; 2025 <a href="https://ivoszbg.github.io/">Ivaylo Ivanov</a></span> · 
 
     <span>
         Powered by
